--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,11 @@
 body {
 	background-color: #ccc;
 }
+.header, .title-words {
+	a {
+		text-decoration: none;
+	}
+}
 .header {
 	a {
 		&:hover {
@@ -10,13 +15,17 @@ body {
 }
 .title-words {
 	a {
-		color: #0548ff;
+		color: #000;
 		margin: 10px 0px;
 		font-size: 100px;
 		cursor: pointer;
 		display: block;
+		border-bottom: 1px solid #fff;
 		&:hover {
-			color: #000;
+			color: #0548ff;
+		}
+		&:last-of-type {
+			border-bottom: none;
 		}
 	}
 }
